--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://www.hasanahtours.com/baru/main/upload/image/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ghg.hasanahtours.com</title>
+    <title>Program Hasanahtours</title>
   </head>
   <body>
     <div id="root"></div>
